# cppmm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  attributes.hpp  bind.sh  cppmm.cpp  enum.cpp  enum.hpp  function.cpp  function.hpp  method.cpp  method.hpp  namespaces.cpp  namespaces.hpp  package.py  package.py.in  param.cpp  param.hpp  record.cpp  record.hpp  testbind.cpp  testbinda.cpp  testbindb.cpp  type.cpp  type.hpp
astgen/: CMakeLists.txt  bake_resources.py
astgen/src/: ast.cpp  ast.hpp  ast_utils.cpp  ast_utils.hpp  astgen.cpp  filesystem.hpp  process_binding.cpp  resources.hpp  stl_prune.hpp  tagged_pointer.hpp
asttoc/: CMakeLists.txt  README.md  simple_test.c
asttoc/include/: base64.hpp  case.hpp  cppmm_ast.hpp  cppmm_ast_add_c.hpp  cppmm_ast_read.hpp  cppmm_ast_write.hpp  cppmm_ast_write_c.hpp  cppmm_ast_write_cmake.hpp  cppmm_ast_write_rustsys.hpp
asttoc/src/: cppmm_ast.cpp  cppmm_ast_add_c.cpp  cppmm_ast_read.cpp  cppmm_ast_to_c.cpp  cppmm_ast_write.cpp  cppmm_ast_write_c.cpp  cppmm_ast_write_cmake.cpp  cppmm_ast_write_rustsys.cpp  main.cpp
genbind/: CMakeLists.txt
genbind/src/: genbind.cpp  genbind.py
include/: cppmm_config.hpp  (+1 more)
test/array_params/ref/array_params-sys/array_params-c/: CMakeLists.txt  c-array_params_private.h
test/array_params/ref/array_params-sys/array_params-c/abigen/: CMakeLists.txt  abigen.cpp  c-array_params.cpp  c-array_params.hpp
test/comments/ref/comments-c/: CMakeLists.txt  c-comments.cpp  c-comments.h  c-comments_private.h  comments-errors.cpp
test/comments/ref/comments-sys/comments-c/: CMakeLists.txt  c-comments.cpp  comments-errors.h
test/containers/ref/: CMakeLists.txt  containers_bind.cpp  containers_bind.h  cppmm_containers.h
test/deep_namespace/ref/deep_namespace-c/: CMakeLists.txt  c-dn.cpp  c-dn.h  c-dn_private.h  deep_namespace-errors.cpp
test/deep_namespace/ref/deep_namespace-sys/deep_namespace-c/: CMakeLists.txt  deep_namespace-errors.h
test/deriveattr/ref/deriveattr-sys/deriveattr-c/: CMakeLists.txt
test/dtor/ref/dtor-c/: CMakeLists.txt  c-dtor.cpp  c-dtor.h  c-dtor_private.h  dtor-errors.cpp  std_string.cpp  std_string.h  std_string_private.h
test/dtor/ref/dtor-sys/dtor-c/: CMakeLists.txt  c-dtor.h  c-dtor_private.h  std_string.cpp
test/exceptions/ref/exceptions-c/: CMakeLists.txt  c-ex.cpp  c-ex.h  c-ex_private.h  exceptions-errors.cpp  exceptions-errors.h
test/function_pointers/ref/function_pointers-c/: CMakeLists.txt  c-fptr.cpp  c-fptr.h  c-fptr_private.h  function_pointers-errors.cpp
test/function_pointers/ref/function_pointers-sys/function_pointers-c/: CMakeLists.txt
test/half/ref/: CMakeLists.txt  half.cpp  half.h
test/imath/ref/: CMakeLists.txt  imath_box.json  imath_vec.cpp  imath_vec.h  imath_vec.json  out.xml
test/imath/ref/ast/: imath_box.json  imath_vec.json
test/imath/ref/c/: imath_box.cpp  imath_box.h  imath_box_private.h  imath_vec.cpp  imath_vec.h  imath_vec_private.h
test/imath/ref/imath-c/: CMakeLists.txt  imath-errors.cpp  imath-errors.h  imath_box.cpp  imath_box.h  imath_box_private.h  imath_vec.cpp  imath_vec.h  imath_vec_private.h
test/imath/ref/imath-sys/: Cargo.toml  build.rs
test/imath/ref/imath-sys/imath-c/: CMakeLists.txt  imath_box.cpp  imath_vec.cpp
test/imath/ref/imath-sys/src/: imath_box.rs  imath_vec.rs  lib.rs
test/oiio/ref/oiio-c/: CMakeLists.txt  c-filesystem.cpp  c-filesystem.h  c-filesystem_private.h  c-imageio.cpp  c-imageio.h  c-imageio_private.h  c-typedesc.cpp  c-typedesc.h  c-typedesc_private.h  std_string.cpp  std_string.h  std_string_private.h  std_vector.cpp  std_vector.h  std_vector_private.h
test/oiio_min/ref/: CMakeLists.txt  c-filesystem.cpp  c-filesystem.h  c-imageio.cpp  c-imageio.h  c-typedesc.cpp  c-typedesc.h
test/openexr/ref/c/: CMakeLists.txt  half_.cpp  half_.h  half_private_.h  imath_box_.cpp  imath_box_.h  imath_box_private_.h  imath_matrix_.cpp  imath_matrix_.h  imath_matrix_private_.h  imath_vec_.cpp  imath_vec_.h  imath_vec_private_.h  imf_aces_file_.cpp  imf_aces_file_.h  imf_aces_file_private_.h  imf_array_.cpp  imf_array_.h  imf_array_private_.h  imf_attribute_.cpp  imf_attribute_.h  imf_attribute_private_.h  imf_b44compressor_.cpp  imf_b44compressor_.h  imf_b44compressor_private_.h  imf_channellist_.cpp  imf_channellist_.h  imf_channellist_private_.h  imf_chromaticities_.cpp  imf_chromaticities_.h  imf_chromaticities_private_.h  imf_compositedeepscanline_.cpp  imf_compositedeepscanline_.h  imf_compositedeepscanline_private_.h  imf_compression_.cpp  imf_compression_private_.h  imf_compressor_.cpp  imf_compressor_.h  imf_compressor_private_.h  imf_convert_.cpp  (+173 more)
test/rustify_enum/ref/rustify_enum-c/: CMakeLists.txt  c-renum.cpp  c-renum.h  c-renum_private.h  rustify_enum-errors.cpp
test/std/ref/: CMakeLists.txt  casts.h  std_string.json  test_bind.cpp  test_bind.h
test/std/ref/ast/: c-usestd.json  std_list.json  std_set.json  std_string.json
test/std/ref/c/: std_string.cpp  std_string.h  std_string_private.h
test/std/ref/std-c/: CMakeLists.txt  c-usestd.cpp  c-usestd.h  c-usestd_private.h  std-errors-private.h  std-errors.cpp  std_set.cpp  std_set.h  std_set_private.h  std_string.cpp  std_string.h  std_string_private.h
test/std/ref/std-sys/: Cargo.toml  build.rs
test/std/ref/std-sys/cppmm_abi_in/: cppmmabi.rs
test/std/ref/std-sys/src/: c_usestd.rs  cppmmabi.rs  lib.rs  std_list.rs  std_set.rs  std_string.rs
test/std/ref/std-sys/std-c/: CMakeLists.txt  c-usestd.cpp  std_string.cpp
test/std/test-rust-sys/clib/: CMakeLists.txt  cppmm_containers.cpp  std_string.cpp  std_string.h
test/templates/ref/: CMakeLists.txt  templates_bind.cpp  templates_bind.h
test/usd/ref/: CMakeLists.txt  bind.cpp  bind.h  tftoken-c.cpp  tftoken-c.h
test/usd/ref-c/: CMakeLists.txt  tftoken-c.cpp  tftoken-c_private.h
test/usd/ref/ast/: tftoken-c.json
test/usd/ref/c/: tftoken-c.cpp  tftoken-c.h  tftoken-c_private.h
test/usd/ref/usd-c/: CMakeLists.txt  tftoken-c.cpp  tftoken-c.h  tftoken-c_private.h
test/usd/ref/usd-sys/: Cargo.toml  build.rs
test/usd/ref/usd-sys/src/: lib.rs  tftoken_c.rs
(+710 files in other folders)
