cmake_minimum_required(VERSION 3.5)
project(mm_binding)
set(CMAKE_CXX_STANDARD 14 CACHE STRING "")
add_library(mm_binding SHARED
    imf_huf_.cpp
    imf_keycode_.cpp
    imf_imagelevel_.cpp
    imf_tiledescription_.cpp
    imf_rational_.cpp
    imf_rgba_.cpp
    imf_framebuffer_.cpp
    imf_deepscanlineoutputfile_.cpp
    imf_b44compressor_.cpp
    imf_flatimageio_.cpp
    imf_wav_.cpp
    imf_deepscanlineinputpart_.cpp
    imf_deeptiledinputfile_.cpp
    imf_framespersecond_.cpp
    imf_io_.cpp
    imf_outputpart_.cpp
    imf_lut_.cpp
    imf_envmap_.cpp
    imath_matrix_.cpp
    imf_tiledinputfile_.cpp
    imf_array_.cpp
    imf_compression_.cpp
    imf_deeptiledoutputfile_.cpp
    imf_inputpart_.cpp
    imf_inputfile_.cpp
    imf_deepscanlineinputfile_.cpp
    imf_attribute_.cpp
    imf_deepimage_.cpp
    imf_tiledrgbafile_.cpp
    imf_deepframebuffer_.cpp
    imf_convert_.cpp
    imf_timecode_.cpp
    imf_deepscanlineoutputpart_.cpp
    imf_tiledoutputfile_.cpp
    imf_deeptiledinputpart_.cpp
    imf_deepimagelevel_.cpp
    imf_tiledinputpart_.cpp
    imf_multipartinputfile_.cpp
    imf_testfile_.cpp
    imf_header_.cpp
    imf_compositedeepscanline_.cpp
    imf_deepimagestate_.cpp
    imf_rgbayca_.cpp
    imf_threading_.cpp
    imf_deepimageio_.cpp
    imf_parthelper_.cpp
    imf_imagedatawindow_.cpp
    imf_lineorder_.cpp
    imf_flatimage_.cpp
    imf_previewimage_.cpp
    imath_vec_.cpp
    imf_opaqueattribute_.cpp
    imf_deepimagechannel_.cpp
    imf_channellist_.cpp
    imf_deeptiledoutputpart_.cpp
    imf_flatimagechannel_.cpp
    imf_imagechannel_.cpp
    imf_version_.cpp
    imf_parttype_.cpp
    imath_box_.cpp
    imf_imageio_.cpp
    imf_imagechannelrenaming_.cpp
    imf_deepcompositing_.cpp
    imf_rgbafile_.cpp
    imf_aces_file_.cpp
    imf_compressor_.cpp
    imf_tiledoutputpart_.cpp
    imf_samplecountchannel_.cpp
    imf_outputfile_.cpp
    half_.cpp
    imf_multiview_.cpp
    imf_pixeltype_.cpp
    imf_image_.cpp
    imf_name_.cpp
    imf_multipartoutputfile_.cpp
    imf_chromaticities_.cpp
    imf_flatimagelevel_.cpp
)
target_include_directories(mm_binding PRIVATE .)
target_include_directories(mm_binding PRIVATE /home/anders/packages/openexr/2.5.5/include)
target_include_directories(mm_binding PRIVATE /home/anders/packages/openexr/2.5.5/include/OpenEXR)
